# apps/api/src/main/java/com/suncorp/securehub/repository/CommentRepository.java
@@ -5,6 +5,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.JpaRepository;
 
+import java.util.Optional;
+
 public interface CommentRepository extends JpaRepository<Comment, Long> {
     Page<Comment> findByRequestId(Long requestId, Pageable pageable);
+    Optional<Comment> findByIdAndRequest_Id(Long id, Long requestId);
 }
